# emergent-abstractions_biased

./: .gitignore  .~lock.testing_report.odt#  DS_3_4.sh  README.md  analysis.ipynb  analysis_3ds_zero_shot.ipynb  analysis_cnn.ipynb  analysis_eval.ipynb  analysis_floats.ipynb  analysis_floats_copy.ipynb  analysis_granularities.ipynb  analysis_lazimpa.ipynb  analysis_length_cost.ipynb  analysis_lengthcost.ipynb  analysis_message_to_concept_ratio.ipynb  analysis_message_to_concept_ratio_one_hot.ipynb  analysis_message_to_concept_ratio_vague.ipynb  analysis_qual_float_encoded.ipynb  analysis_qual_granularities.ipynb  analysis_qual_one_hot.ipynb  analysis_qual_vague.ipynb  analysis_qualitative.ipynb  analysis_qualitative_lazimpy.ipynb  analysis_qualitative_lazy.ipynb  analysis_rsa.ipynb  analysis_without_vague.ipynb  analysis_zero_shot.ipynb  analysis_zero_shot_qualitative.ipynb  archs.py  archs_float_encoded_ds.py  archs_linear.py  archs_mu_goodman.py  archs_threshold.py  attribute_visualization.ipynb  attribute_visualization_lazimpa.ipynb  cal_metrics_lazy.ipynb  calc_metrics_lazimpa.ipynb  calc_metrics_lazy.ipynb  calc_unique_concepts.py  cluster.md  (+66 more)
.devcontainer/: Dockerfile  devcontainer.json
BayesianAnalysis/: BEST_NMI_coarse.Rda  BEST_NMI_fine.Rda  BEST_cons_coarse.Rda  BEST_cons_fine.Rda  BEST_eff_coarse.Rda  BEST_eff_fine.Rda  BayesianAnalysis.R  data_for_R.csv
analysis/: 00_vocab_sizes.csv  message_counts.csv  quali_(3,16)_standard_[10.  7.  6.],[1. 0. 0.]all.csv  quali_(3,16)_standard_coarse_[ 8.  6. 11.],[0. 1. 1.]all.csv  (+101 more)
data/: dim(3,16).ds  dim(3,4).ds  (+4 more)
(+5710 files in other folders)
